--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 			<header>
 				<h2>Video</h2>
 				<a href=""></a>
+				<input id="video-speed" title="Set playback rate" type="number" step="0.125" value="1">
 			</header>
 			<video width="100%" height="100%" style="flex: 1;" controls></video>
 		</section>
@@ -196,18 +197,33 @@
 					})
 
 					// Video
-					this.videoSec.querySelector('video').addEventListener('timeupdate', (e => {
-						const video = this.videoSec.querySelector('video')
-						const info  = this.videoSec.querySelector('a')
-						this.currentTime = video.currentTime
+					const videoElem   = this.videoSec.querySelector('video')
+					const inSpeed = this.videoSec.querySelector('#video-speed')
+					const info  = this.videoSec.querySelector('a')
 
-						const txt =  `${video.dataset.name} - ${this.#formatDuration(this.currentTime)}`
+					videoElem.addEventListener('timeupdate', (e => {
+						this.currentTime = videoElem.currentTime
+
+						const txt =  `${videoElem.dataset.name} - ${this.#formatDuration(this.currentTime)}`
 						if (info.innerText != txt) {
 
 							info.innerText = txt
-							info.href = `/${video.dataset.path}?t=${this.currentTime}`
+							info.href = `/${videoElem.dataset.path}?t=${this.currentTime}`
 						}
 					}).bind(this))
+
+					videoElem.addEventListener('ratechange', e => {
+						if (videoElem.playbackRate != parseFloat(inSpeed.value)) {
+							inSpeed.value = videoElem.playbackRate
+						}
+					})
+					
+					inSpeed.addEventListener('change', e => {
+						const rate = parseFloat(inSpeed.value)
+						if (rate != videoElem.playbackRate) {
+							videoElem.playbackRate = rate
+						}
+					})
 				}
 
 				async selectRootDirectory() {
